MacViews: Fix failing mouse capture unittests.

This CL implements NativeWidgetPrivate::GetGlobalCapture for NativeWidgetMac.
This was added in crrev.com/1953753002. This fixes the following three unittests
which fail on MacViews:
  -WidgetTest.MousePressCausesCapture
  -WidgetTest.CaptureDuringMousePressNotOverridden
  -MenuRunnerTest.WidgetDoesntTakeCapture

This CL also fixes the EventGeneratorDelegateMac::CenterOfWindow implementation
which incorrectly returns the center point in screen coordinates while other
EventGeneratorDelegateMac methods assume the window coordinates as the root
coordinate system. This is needed for the three tests above to pass, since they
don't specify an explicit event location for the EventGenerator.

BUG=622979, 607403

Review-Url: https://codereview.chromium.org/2096993002
Cr-Commit-Position: refs/heads/master@{#402388}

Former-commit-id: d3ce4a9c327dcacf9a50792218fb79a794dae518